Implement thank you page and rating feature
Added thank you page with rating functionality and adjusted login/logout behavior.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@ body{
   transition:1s;
 }
 
-/* Clear Background After Login */
 body.main-bg{
   background:url("https://content.jdmagicbox.com/v2/comp/bangalore/51/080p4304951/catalogue/impact-college-of-engineering-and-applied-sciences-kodigehalli-bangalore-institutes-1300ag5.jpg");
   background-size:cover;
@@ -39,7 +38,6 @@ body.main-bg{
   100%{background-position:0% 50%;}
 }
 
-/* Container without blur */
 .container{
   width:95%;
   max-width:1100px;
@@ -50,12 +48,6 @@ body.main-bg{
   color:#333;
   max-height:95vh;
   overflow:auto;
-  animation:fadeIn 1s ease;
-}
-
-@keyframes fadeIn{
-  from{opacity:0; transform:translateY(20px);}
-  to{opacity:1; transform:translateY(0);}
 }
 
 h2,h3{
@@ -133,6 +125,23 @@ li:hover{
 .logout:hover{
   background:#cc0000;
 }
+
+/* Rating Stars */
+.stars{
+  text-align:center;
+  font-size:30px;
+  cursor:pointer;
+  margin-top:10px;
+}
+
+.stars span{
+  color:#ccc;
+  transition:0.3s;
+}
+
+.stars span.active{
+  color:gold;
+}
 </style>
 </head>
 
@@ -179,18 +188,23 @@ li:hover{
     <li onclick="quickSelect('GF004')">GF004 – Robotics Class Room</li>
     <li onclick="quickSelect('GF005')">GF005 – IDT Lab</li>
     <li onclick="quickSelect('GF006')">GF006 – Seminar Hall</li>
-    <li onclick="quickSelect('FF001')">FF001 – Principal Office</li>
-    <li onclick="quickSelect('FF002')">FF002 – Account Department</li>
-    <li onclick="quickSelect('FF003')">FF003 – Civil Staff Room</li>
-    <li onclick="quickSelect('FF004')">FF004 – Mechanical Staff Room</li>
-    <li onclick="quickSelect('FF005')">FF005 – Mechanical Lab</li>
-    <li onclick="quickSelect('FF006')">FF006 – Civil Lab</li>
-    <li onclick="quickSelect('SF001')">SF001 – Computer Science Staff Room</li>
-    <li onclick="quickSelect('SF002')">SF002 – Computer Science Lab</li>
-    <li onclick="quickSelect('TF001')">TF001 – Physics Lab</li>
   </ul>
 
   <button class="logout" onclick="logout()">Logout</button>
+</div>
+
+<div class="container hidden" id="thankYouPage">
+  <h2>🙏 Thank You for Using Campus Navigation System</h2>
+  <h3>Please Rate Your Experience</h3>
+  <div class="stars" id="ratingStars">
+    <span onclick="rate(1)">★</span>
+    <span onclick="rate(2)">★</span>
+    <span onclick="rate(3)">★</span>
+    <span onclick="rate(4)">★</span>
+    <span onclick="rate(5)">★</span>
+  </div>
+  <p id="ratingMsg" style="text-align:center; margin-top:10px;"></p>
+  <button onclick="goLogin()">Back to Login</button>
 </div>
 
 <script>
@@ -198,42 +212,15 @@ const locations = {
   B1:"Enter Gate 1 → After Admission Office → Near Impact Green Block",
   B2:"Right side of Gate 1",
   B3:"After Admission Office → Take right inside Architecture room",
-  B4:"In front of Gate 2 → Opposite Boys Hostel",
-  B5:"After Admission Office → Take right",
-  B6:"Opposite Boys Hostel",
-  B7:"Near Gate 2",
-  B8:"After Canteen",
-  B9:"Opposite Impact Green",
-  B10:"Opposite Visvesvaraya Hall",
-  B11:"Opposite Ramanuja Hall",
-  B12:"Beside Seminar Hall",
-  B13:"Beside Sports Block",
-
-  GF001:"Ground Floor → First Room on the left",
-  GF002:"Ground Floor → Second Room on the left",
-  GF003:"Ground Floor → Third Room on the left",
-  GF004:"Ground Floor → Fourth Room on the left",
-  GF005:"Ground Floor → Fifth Room on the left",
-  GF006:"Ground Floor → Last Room after IDT Lab",
-
-  FF001:"First Floor → First Room on the right",
-  FF002:"Opposite Principal Office",
-  FF003:"First Floor → First Room on the left",
-  FF004:"First Floor → Right side Last Room",
-  FF005:"First Floor → Near Mechanical Staff Room",
-  FF006:"First Floor → Near Civil Staff Room",
-
-  SF001:"Second Floor → Right side Last Room",
-  SF002:"Second Floor → Near Computer Science Staff Room",
-
-  TF001:"Third Floor → First Room"
+  B4:"In front of Gate 2 → Opposite Boys Hostel"
 };
 
 function login(){
-  if(username.value==="admin" && password.value==="1234"){
+  if(username.value==="admin" && password.value==="3014"){
     loginPage.classList.add("hidden");
     mainPage.classList.remove("hidden");
     document.body.classList.add("main-bg");
+    loginMsg.innerHTML="";
   }else{
     loginMsg.innerHTML="❌ Invalid Login";
   }
@@ -241,8 +228,13 @@ function login(){
 
 function logout(){
   mainPage.classList.add("hidden");
-  loginPage.classList.remove("hidden");
+  thankYouPage.classList.remove("hidden");
   document.body.classList.remove("main-bg");
+}
+
+function goLogin(){
+  thankYouPage.classList.add("hidden");
+  loginPage.classList.remove("hidden");
 }
 
 function searchLocation(){
@@ -259,9 +251,17 @@ function quickSelect(val){
   searchLocation();
 }
 
-searchbox.addEventListener("keypress",function(e){
-  if(e.key==="Enter") searchLocation();
-});
+function rate(stars){
+  let allStars=document.querySelectorAll("#ratingStars span");
+  allStars.forEach((star,index)=>{
+    if(index<stars){
+      star.classList.add("active");
+    }else{
+      star.classList.remove("active");
+    }
+  });
+  ratingMsg.innerHTML="⭐ You rated "+stars+" out of 5. Thank you!";
+}
 </script>
 
 </body>
